<resources>
  <string name="app_name">TopUpQR</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="action_settings">Settings</string>
  <string name="title_activity_login">Sign in</string>

  <!-- Strings related to login -->
  <string name="prompt_email">Phone number</string>
  <string name="prompt_password">Password (optional)</string>
  <string name="action_sign_in">Sign in or register</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="error_invalid_email">This email address is invalid</string>
  <string name="error_invalid_password">This password is too short</string>
  <string name="error_incorrect_password">This password is incorrect</string>
  <string name="error_field_required">This field is required</string>
  <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
  <string name="authorization">Authorization</string>
  <string name="login">Phone number</string>
  <string name="password">Password</string>
  <string name="enter">SignUp</string>
  <string name="code_info">SMS-Code was sent to your number</string>
  <string name="enter_code">Enter the code from sms</string>
  <string name="code">Code</string>
  <string name="return_back">Return to Login</string>
</resources>
