<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

  <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?android:attr/actionBarSize"
      android:background="@color/blue"
      >


    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:paddingRight="20dp"
        android:paddingTop="4dp"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:tint="@color/white"
        />
  </android.support.v7.widget.Toolbar>
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/toolbar"
      android:layout_margin="40dp"
      android:gravity="center"
      android:text="@string/code_info"
      android:textColor="@color/textColor"
      android:textSize="22sp"
      />

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:layout_gravity="center"
      android:gravity="center_horizontal"
      android:minWidth="250dp"
      android:orientation="vertical"
      >

    <EditText
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColorHint="@color/hintColor"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_code"
        android:textColor="@color/hintColor"
        android:textSize="16sp"
        />


    <Button
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/login_bnt_box"
        android:gravity="center"
        android:minHeight="55dp"
        android:minWidth="220dp"
        android:text="@string/enter"
        android:textColor="@color/white_milk"
        android:textSize="15dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/returnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/return_back"
        android:textColor="@color/hintColor"
        android:textSize="18sp"
        />
  </LinearLayout>

</RelativeLayout>

